[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "metagenome-report"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    {name = "Karen van Niekerk", email = "kh18@sanger.ac.uk"},
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "tabulate",      # for DataFrame.to_markdown()
    "num2words",
]

[project.optional-dependencies]
tree = ["ete3"]

[project.scripts]
metagenome-report = "metagenome_report.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metagenome_report*"]
